Scrollbar fixate

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
     color: #000;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 a {
@@ -346,6 +347,8 @@ main > section:nth-child(4) a {
     flex-grow: 1;
     width: 30%;
     min-width: 400px;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 .griglia-team > div:nth-child(2) .logo-team {
@@ -369,6 +372,10 @@ main > section:nth-child(4) a {
 
 .griglia-team > div:nth-child(2) address {
     font-style: normal;
+}
+
+.griglia-team > div:nth-child(2) p {
+    margin: 30px 0;
 }
 
 .griglia-team > div:nth-child(1), .griglia-team > div:nth-child(3) {
